# pigsnkings

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gfx.yml  metadata.yml
.github/workflows/: build_pigsnkings.yml
docs/: config_remote_fork.md  howto-32blit.md  howto-gfx.md  howto-sfx-snd.md  investigation.md  setting_up_the_repo.md  states_of_hero.md  sync.md
fonts/: barcadebrawl.h  howto  hud_font_big.h  hud_font_small.h
gfx/characters/: bubble.aseprite  cannons_n_pigs.aseprite  cannons_n_pigs.json  hammer.aseprite  king.aseprite  king.json  king_w_hammer.aseprite  pig.aseprite  pig.json  pig_bomb.aseprite  pig_bomb.json  pig_box.aseprite  pig_box.json  pig_crate.aseprite  pig_crate.json  pig_in_box.aseprite  pig_in_box.json  pig_king.aseprite  pig_king.json
gfx/common/: hud_ui.aseprite  menus.xcf
gfx/common/items/: bomb.aseprite  bomb.json  box.aseprite  box.json  items.aseprite  items.json  lives.aseprite  lives.json  lives_hud.aseprite  lives_hud.json
gfx/levels/: castle_decoration_tiles.aseprite  castle_decoration_tiles.json  door.aseprite  door.json
gfx/main/: pnk_logo.xcf  screens.aseprite
gfx/pnk/: 02-KingHuman_bubble.aseprite  pnk_sprites.xcf
helpers/: fix_gamesaves.md  gameprefs.hexpat  gamesave.hexpat
rsrc/: bubble.png.h  castle_tiles.png.h  end_scene.tmx.hpp  game_strings.hpp  hud_ui.png.h  king.png.h  level_1.tmx.hpp  level_1_inwork.tmx.hpp  level_2.tmx.hpp  level_2_alt.tmx.hpp  level_3.tmx.hpp  level_4.tmx.hpp  main_1.tmx.hpp  menus.png.h  menus_png.h  players_png.h  pnk_32_lvl1.tmx.hpp  pnk_32_menu.tmx.hpp  pnk_logo.png.h  pnk_sprites_png.h  prefs_1.tmx.hpp  sl_shield_32blit_png.h  tiles_bg_png.h
rsrc/gfx/: bomb.png.h  box.png.h  bubble.png.h  cannons_n_pigs.png.h  castle_decoration_tiles.png.h  castle_tiles.png.h  door.png.h  hammer.png.h  hud_ui.png.h  items.png.h  king.png.h  king_w_hammer.png.h  lives.png.h  lives_hud.png.h  menus.png.h  pig.png.h  pig_bomb.png.h  pig_box.png.h  pig_crate.png.h  pig_in_box.png.h  pig_king.png.h  pnk_logo.png.h  sl_shield_32blit.png.h
sfx/: bomb_explode_22050_mono.h  boss_battle_22050_mono.h  bubble_blow_22050_mono.h  bubble_pop_22050_mono.h  cannon_fire_22050_mono.h  cheat_22050_mono.h  coin_22050_mono.h  crate_explode_22050_mono.h  defeat_22050_mono.h  health_22050_mono.h  howto  jump_22050_mono.h  king_damage_22050.h  lifelost_22050_mono.h  pig_squeal_22050_mono.h  teleport_22050_mono.h  victory_22050_mono.h  win_22050_mono.h
src/: ActionState.cpp  Bubble.cpp  Bubble.h  Enemy.cpp  Enemy.h  FireworksLayer.cpp  FireworksLayer.h  GSAbout.cpp  GSAbout.h  GSEndScene.cpp  GSEndScene.hpp  GSHome.cpp  GSHome.h  GSIntro.cpp  GSIntro.h  GSPlay.cpp  GSPlay.h  GSPrefs.cpp  GSPrefs.h  GameState.cpp  GameState.h  HUDLayer.cpp  HUDLayer.hpp  Hero.cpp  Hero.h  ImageFactory.cpp  ImageFactory.h  Level.cpp  Level.h  LevelFlow.cpp  LevelFlow.h  MotionState.cpp  MotionState.h  PnkEvent.cpp  PnkEvent.h  Reward.cpp  Reward.h  RoomTrigger.cpp  RoomTrigger.h  ScreenPlay.cpp  (+20 more)
src/actors/hero/: ActionState.cpp  ActionState.h  Hero.cpp  Hero.h  MotionState.cpp  MotionState.h  SomaticState.cpp  SomaticState.h
src/actors/npc/: Enemy.cpp  Enemy.h  HenchPig.cpp  HenchPig.h  PigBomb.cpp  PigBomb.h  PigBoss.cpp  PigBoss.h  PigBox.cpp  PigBox.h  PigCannon.cpp  PigCannon.h  PigCrate.cpp  PigCrate.h  Throwies.cpp  Throwies.h
src/actors/others/: BossbattleTrigger.cpp  BossbattleTrigger.h  Cannon.cpp  Cannon.h  LevelTrigger.cpp  LevelTrigger.h  Moodies.cpp  Moodies.h  MoodiesThatHurt.cpp  MoodiesThatHurt.h  Reward.cpp  Reward.h  RoomTrigger.cpp  RoomTrigger.h  SavepointTrigger.cpp  SavepointTrigger.h
src/actors/throwies/: Bombies.cpp  Bombies.h  Bubble.cpp  Bubble.h  Cannonball.cpp  Cannonball.h  Craties.cpp  Craties.h  Throwies.cpp  Throwies.h
src/levels/: Level1SP.cpp  Level1SP.hpp  Level2SP.cpp  Level2SP.hpp  Level3SP.cpp  Level3SP.hpp  Level4SP.cpp  Level4SP.hpp  ScreenPlay.cpp  ScreenPlay.h
tmx_level/: pnk_32_lvl1.tmx  pnk_32_menu.tmx  pnk_level1.tmx
tracks/: dance2.h  dance2.mod  etheric.xm  etheric_xm.h  gocryogo.h  gocryogo.mod  groovy.h  groovy.mod  howto  kingdom_of_dwarfs.h  kingdom_of_dwarfs.mod  kings_of_dawn.mod  kingsofdawn.h  paperbird.h  u4iasmok.h
world/: pnk.tiled-project
world/extensions/: blit32_exporter.js
world/maps/: end_scene.tmx  end_scene.tmx.hpp  level_1.tmx  level_1.tmx.hpp  level_1_inwork.tmx  level_1_inwork.tmx.hpp  level_2.tmx  level_2.tmx.hpp  level_2_alt.tmx  level_2_alt.tmx.hpp  level_2_eidi.tmx  level_3.tmx  level_3.tmx.hpp  level_4.tmx  level_4.tmx.hpp  main_1.tmx  main_1.tmx.hpp  prefs_1.tmx  prefs_1.tmx.hpp
world/templates/: dummy_template.tx
world/tilesets/: castle_tiles.tsx  character_bubbles.tsx  character_cannonsnpigs.tsx  character_king.tsx  character_pig.tsx  character_pigbomb.tsx  character_pigbox.tsx  character_pigcrate.tsx  character_piginbox.tsx  character_pigking.tsx  common_hud_ui.tsx  common_items.tsx  common_items_bomb.tsx  common_items_box.tsx  common_lives.tsx  common_menus.tsx  hammer.tsx  king_w_hammer.tsx  levels_castle_decorations_tiles.tsx  levels_castle_tiles.tsx  levels_door.tsx  main_pnk_logo.tsx
